# parallel-computing

./: README.md
5441 lab/: batch.rtf
5441 lab/lab1_serial/: Makefile  ds_amr_csr_serial.c  ds_amr_csr_serial.h
5441 lab/lab2_pthreads/: CMakeLists.txt  Lab2 Pthreads report.docx  Makefile  Sheng_Ding_disposable.c  Sheng_Ding_disposable.h  Sheng_Ding_persistent.c  Sheng_Ding_persistent.h  disposable  persistent
5441 lab/lab2_pthreads/output/: output_disposable_1  output_disposable_16  output_disposable_2  output_disposable_28  output_disposable_3  output_disposable_4  output_disposable_8  output_persistent_1  output_persistent_16  output_persistent_2  output_persistent_28  output_persistent_3  output_serial  (+2 more)
5441 lab/lab3_openmp/: CMakeLists.txt  Lab3 Openmp report.docx  Sheng_Ding_omp_disposable.c  Sheng_Ding_omp_disposable.h  Sheng_Ding_omp_persistent.c  Sheng_Ding_omp_persistent.h
5441 lab/lab3_openmp/output/: output_omp_disposable_1  output_omp_disposable_16  output_omp_disposable_2  output_omp_disposable_28  output_omp_disposable_3  output_omp_disposable_4  output_omp_disposable_8  output_omp_persistent_1  output_omp_persistent_16  output_omp_persistent_2  output_omp_persistent_28  output_omp_persistent_3  output_omp_persistent_4  output_omp_persistent_8
5441 lab/lab4_cuda/: CMakeLists.txt  Lab4 CUDA report.docx  Sheng_Ding_cuda.c  Sheng_Ding_cuda.h
5441 lab/lab5_ami/: CMakeLists.txt  Lab5 MPI report.docx  Sheng_Ding_mpi.c  Sheng_Ding_mpi.h  mpi_hello.c  mpi_sed_rec.c  output_pthread_persistent_33  output_pthread_persistent_43  output_pthread_persistent_44
(+3 files in other folders)
